--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="_vars.css">
+        <link rel="stylesheet" href="_text_styles.css">
         <link rel="stylesheet" href="demo.css">
     </head>
     <body>
@@ -27,7 +29,7 @@
         </nav>
 
         <header class="centered">
-            <h1>Lucid Demo DS</h1>
+            <h1 class="header-text">Lucid Demo DS</h1>
             <p>
                 Demo page showing how exported design tokens help
                 quickly update a website
