text styles are applied

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 
-        <nav id="top-nav" class="centered">
+        <nav id="top-nav" class="centered menu-text">
             <ul>
                 <li>
                     <a href="#">About</a>
@@ -30,13 +30,13 @@
 
         <header class="centered">
             <h1 class="header-text">Lucid Demo DS</h1>
-            <p>
+            <p class="body-text">
                 Demo page showing how exported design tokens help
                 quickly update a website
             </p>
         </header>
 
-        <div id="main" class="centered">
+        <div id="main" class="centered body-text">
             <section>
                 <p>
                     Lorem ipsum dolor sit amet, 
@@ -69,7 +69,7 @@
             </section>
         </div>
 
-        <footer class="centered">
+        <footer class="centered body-text">
             <p>(c) Lucid Demo DS</p>
         </footer>
     </body>
