--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="_vars.css">
         <link rel="stylesheet" href="_text_styles.css">
+        <link rel="stylesheet" href="_layer_styles.css">
         <link rel="stylesheet" href="demo.css">
     </head>
     <body>
 
-        <nav id="top-nav" class="centered menu-text">
+        <nav id="top-nav" class="centered top-menu menu-text">
             <ul>
                 <li>
                     <a href="#">About</a>
