testing auto push

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1 class="header-text">Lucid Demo DS</h1>
             <p class="body-text">
                 Demo page showing how exported design tokens help
-                quickly update a website
+                quickly update a website. Testing auto push
             </p>
         </header>
 
