--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <header class="centered">
             <h1 class="header-text">Lucid Demo DS</h1>
-            <p class="body-text">
+            <p class="subheader-text">
                 Demo page showing how exported design tokens help
                 quickly update a website.
             </p>
@@ -70,7 +70,7 @@
             </section>
         </div>
 
-        <footer class="centered body-text">
+        <footer class="centered footer-text">
             <p>(c) Lucid Demo DS</p>
         </footer>
     </body>
