--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="_vars.css">
-        <link rel="stylesheet" href="_text_styles.css">
-        <link rel="stylesheet" href="_layer_styles.css">
+        <link rel="stylesheet" href="lucid/_vars.css">
+        <link rel="stylesheet" href="lucid/_font_faces.css">
+        <link rel="stylesheet" href="lucid/_text_styles.css">
+        <link rel="stylesheet" href="lucid/_layer_styles.css">
         <link rel="stylesheet" href="demo.css">
     </head>
     <body>
